--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid m-0 p-0">
+<div class="container-fluid m-0 p-0 hide-scroll">
     <div class="container">
         <router-outlet></router-outlet>        
     </div>
