--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,9 +1,15 @@
 <!-- Lista de Fotos -->
 <ol class="list-unstyled">
-    <li *ngFor="let row of rows" class="row" >
+    <li *ngFor="let row of rows" class="row no-gutters">
         <div *ngFor="let photo of row" class="col-4">
-            <mf-photo  [url]='photo.url' [description]='photo.description'></mf-photo> 
-        </div> 
+            <mf-card>
+                <mf-photo [url]='photo.url' [description]='photo.description'></mf-photo>
+                <div class="details-bar pt-1 text-center" >
+                    <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2"></i>{{ photo.likes }}
+                    <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2"></i>{{ photo.comments }}
+                </div>
+            </mf-card>
+        </div>
     </li>
 </ol>
 
