--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid m-0 p-0 hide-scroll">
+<mf-header></mf-header>
+<div class="container-fluid m-0 p-0">
     <div class="container">
         <router-outlet></router-outlet>        
     </div>
