--- a/src/app/test/meuTeste.component.html
+++ b/src/app/test/meuTeste.component.html
@@ -2,9 +2,8 @@
 
     <div *ngFor="let item of arrayNumeros">
         <div>
-            <div class="tooltip-ex">
-                <div class="tooltip-ex-text">{{item}} oaojdiwnidnwidniwdniw</div>
-                <span>{{item}}</span>
+            <div attr.texto-tolltip={{item}}>
+                Erro
             </div>
         </div>
     </div>
