--- a/src/app/test/meuTeste.component.css
+++ b/src/app/test/meuTeste.component.css
@@ -1,6 +1,7 @@
 [texto-tolltip] { /* Container for our tooltip */
   position: relative; 
   width: 200px;
+  cursor: pointer
  }
 
 [texto-tolltip]::before { 
