--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand">ALURAPIC</a>
         <div>
             <i class="fa fa-user-circle"></i>
-            <a>Aqui deve entrar o username</a>
+            <span class="ml-2">{{user?.name}}</span>
         </div>
     </nav>
 </header>
