--- a/src/app/home/sign-up/sign-up.component.html
+++ b/src/app/home/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <h4 class="text-center"> Register to embrace a new world!</h4>
 
-<form [formGroup]="signUpForm" class="form mt-4">
+<form [formGroup]="signUpForm" class="form mt-4" (submit)='submit()'>
 
     <!-- email -->
     <div class="form-group">
@@ -53,8 +53,9 @@
         ></mf-vmessage>
         <mf-vmessage 
         *ngIf="signUpForm.get('userName')?.errors?.userNameTaken && !signUpForm.get('userName')?.pristine"
-        message ='UserNameTaken'
+        message ='User name already taken'
         ></mf-vmessage>
+        <div class="text-success" *ngIf="signUpForm.get('userName')?.valid">User name available</div>
     </div>
 
     <!-- password -->
