--- a/src/app/photos/photos-form/photos-form.component.html
+++ b/src/app/photos/photos-form/photos-form.component.html
@@ -1,1 +1,38 @@
-<p>photos-form works!</p>
+<div class="container">
+    <form [formGroup]="photoForm" class="row mt-5" (submit)="upload()">
+        <div class="col-md-6 text-center">
+            <input type="file" accept="image/*" (change)="setImageFile($event)" formControlName="image">
+            <mf-vmessage *ngIf="(photoForm.get('image').errors?.required) && (photoForm.get('image').touched)"
+                message="please select a photo">
+            </mf-vmessage>
+                <img #imagemParaUpload hidden class='img-thumbnail mt-2'>
+        </div>
+
+
+        <div class="col-md-6">
+            <div class="form-group">
+                <textarea class="form-control form-control-sm" placeholder="photo description"
+                    formControlName="description"></textarea>
+                <mf-vmessage *ngIf="photoForm.get('description').errors?.required && photoForm.get('description').touched"
+                    message="please insert a description">
+                </mf-vmessage>
+                <mf-vmessage *ngIf="photoForm.get('description').errors?.maxlength"
+                message="the description max length is 300 characters">
+            </mf-vmessage>
+            </div>
+
+            <div class="form-group">
+                <label class="text-muted">
+                    Allow comments
+                    <input type="checkbox" formControlName="allowComments">
+                </label>
+            </div>
+
+            <button type="submit" [disabled]="photoForm.invalid" class="btn btn-primary btn-block">
+                Upload
+            </button>
+
+            <a class="btn btn-secondary btn-block">Cancel</a>
+        </div>
+    </form>
+</div>
