detalhes da foto adicionado

--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -2,13 +2,15 @@
 <ol class="list-unstyled">
     <li *ngFor="let row of rows" class="row no-gutters">
         <div *ngFor="let photo of row" class="col-4">
-            <mf-card>
-                <mf-photo [url]='photo.url' [description]='photo.description'></mf-photo>
-                <div class="details-bar pt-1 text-center" >
-                    <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2"></i>{{ photo.likes }}
-                    <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2"></i>{{ photo.comments }}
-                </div>
-            </mf-card>
+            <a [routerLink]="['/p', photo.id]" routerLinkActive="router-link-active">
+                <mf-card>
+                    <mf-photo [url]='photo.url' [description]='photo.description'></mf-photo>
+                    <div class="details-bar pt-1 text-center" >
+                        <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2"></i>{{ photo.likes }}
+                        <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2"></i>{{ photo.comments }}
+                    </div>
+                </mf-card>
+            </a>
         </div>
     </li>
 </ol>
