--- a/src/app/photos/photo-details/photo-details.component.html
+++ b/src/app/photos/photo-details/photo-details.component.html
@@ -9,16 +9,7 @@
           <p class="text-left break-word">{{photo.description}}</p>
           <hr>
         </small>
-        <div class="mt-4">
-          <form>
-            <div class="input-group">
-              <textarea class="form-control"></textarea>
-              <div class="input-group-append">
-                <button class="btn btn-primary pull-left">Publish</button>
-              </div>
-            </div>
-          </form>
-        </div>
+        <mf-photo-comments [photoId]='photoId'></mf-photo-comments>
       </div>
     </div>
   </div>
