--- a/src/app/photos/photo-details/photo-details.component.html
+++ b/src/app/photos/photo-details/photo-details.component.html
@@ -7,6 +7,10 @@
     <div class="col-lg-4 p-4">
       <small>
         <p class="text-left break-word">{{photo.description}}</p>
+        <div class="text-left mb-4">
+          <i class="fa fa-comment-o fa-2x mr-2 ml-2"></i>{{ photo.comments }}
+          <i class="fa fa-trash-o fa-2x pull-right" (click)='removePhoto()' mfOwnerOnly [OwnerId]='photo.userId'></i>
+        </div>
         <hr>
       </small>
       <mf-photo-comments *ngIf="photo.allowComments; else warning" [photoId]='photoId'></mf-photo-comments>
