alerta implementado na exclusão

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,9 @@
 <footer class="mt-5" *ngIf="(user$ | async) as user">
+
     <div class="fixed-bottom bg-white p-1">
+        <div class="mb-2">
+            <mf-alert></mf-alert>
+        </div>
         <div class="container">
             <div class="row text-center">
                 <div class="col-6">
