--- a/src/app/photos/photo-details/photo-details.component.html
+++ b/src/app/photos/photo-details/photo-details.component.html
@@ -8,6 +8,7 @@
       <small>
         <p class="text-left break-word">{{photo.description}}</p>
         <div class="text-left mb-4">
+          <i (click)='likePhoto()' class="fa fa-heart-o fa-2x mr-2 pull-left"></i>{{ photo.likes }}
           <i class="fa fa-comment-o fa-2x mr-2 ml-2"></i>{{ photo.comments }}
           <i class="fa fa-trash-o fa-2x pull-right" (click)='removePhoto()' mfOwnerOnly [OwnerId]='photo.userId'></i>
         </div>
